--- a/de/LC_MESSAGES/vk-music-bot.po
+++ b/de/LC_MESSAGES/vk-music-bot.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-06-01 16:38+0300\n"
-"PO-Revision-Date: 2019-06-01 18:04+0300\n"
+"PO-Revision-Date: 2019-06-01 18:38+0200\n"
 "Last-Translator: vkmowner <vkmowner@telegram>\n"
 "Language-Team: German\n"
 "Language: de_DE\n"
@@ -11,11 +11,11 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.2.3\n"
 
 #: handlers/audio.py:118
 msgid "Please wait, your audio is coming..."
-msgstr ""
+msgstr "Bitte warten, ihre Audio kommt gleich"
 
 #: handlers/audio.py:134
 msgid "Song is removed by copyright owners"
@@ -24,131 +24,145 @@ msgstr "⛔️ Song wurde von Copyright-Inhabern entfernt"
 #: handlers/docdb.py:64
 msgid "Got it! Note: it may take time for the song to appear in the search"
 msgstr ""
+"Verstanden! Hinweis: Es kann dauern, bis der Song in der Suche erscheint"
 
 #: handlers/donation.py:43 handlers/donation.py:113 handlers/settings.py:52
 #: handlers/settings.py:72
 msgid "Close"
-msgstr ""
+msgstr "Schließen"
 
 #: handlers/donation.py:46
 msgid "Support us"
-msgstr ""
+msgstr "Unterstütze uns"
 
 #: handlers/donation.py:48
 msgid ""
 "Your donations help us to develop new features, increase stability and pay "
 "for our servers."
 msgstr ""
+"Ihre Spenden helfen uns, neue Funktionen zu entwickeln, die Stabilität zu "
+"erhöhen und für unsere Server zu bezahlen."
 
 #: handlers/donation.py:51 handlers/donation.py:131
 msgid ""
 "For just one donation we will gift your account with a *lifetime* premium "
 "status. There is a short list of premium features you will receive:"
 msgstr ""
+"Für nur eine Spende werden wir Ihrem Konto einen * lebenslänglichen * "
+"Premium-Status schenken. Es gibt eine kurze Liste von Premium-Funktionen, "
+"die Sie erhalten:"
 
 #: handlers/donation.py:54 handlers/donation.py:134
 msgid "No more ads and spam to you, *forever*"
-msgstr ""
+msgstr "Keine Werbung mehr, * für immer *"
 
 #: handlers/donation.py:55 handlers/donation.py:135
+#, fuzzy
 msgid "An option to disable advertising inline captions"
-msgstr ""
+msgstr "Eine Option Werbe-inline-captions zu deaktivieren"
 
 #: handlers/donation.py:56 handlers/donation.py:136
 msgid "An option to display audio format info"
-msgstr ""
+msgstr "Eine Option Informationen zum Audioformat anzuzeigen"
 
 #: handlers/donation.py:57 handlers/donation.py:137
 msgid "An option to change search results size"
-msgstr ""
+msgstr "Eine Option die Größe der Suchergebnisse zu ändern"
 
 #: handlers/donation.py:58 handlers/donation.py:138
 msgid "More options under /settings command"
-msgstr ""
+msgstr "Weitere Optionen unter dem /settings Befehl"
 
 #: handlers/donation.py:60
 #, python-format
 msgid ""
 "Subscribe to our news channel to be notified of new features: %(channel)s"
 msgstr ""
+"Abonnieren Sie unseren News-Kanal um über neue Features informiert zu werde: "
+"%(channel)s"
 
 #: handlers/donation.py:118
 msgid "You are a premium user!"
-msgstr ""
+msgstr "Sie sind ein Premium-Nutzer"
 
 #: handlers/donation.py:120
 msgid ""
 "You're a good person who kindly supports us, so we granted you a *lifetime* "
 "premium status, enjoy it"
 msgstr ""
+"Sie sind ein guter Mensch, der uns unterstützt. Deshalb gewähren wir Ihnen "
+"*lebenslänglichen * Premium Status. Viel Spaß damit"
 
 #: handlers/donation.py:124
 msgid "There is a short list of premium features you have:"
-msgstr ""
+msgstr "Hier eine kurze Liste mit Premium Features die Sie haben:"
 
 #: handlers/donation.py:126
 msgid "You are not premium, yet"
-msgstr ""
+msgstr "Sie sind noch nicht Premium Nutzer"
 
 #: handlers/donation.py:128
 msgid ""
 "Use /donate command to support us and get your *lifetime* premium status"
 msgstr ""
+"Nutzen Sie /donate um uns zu unterstützen und * lebenslänglichen* premium "
+"Status zu erhalten"
 
 #: handlers/favorites.py:34
 msgid "Added to your playlist (/my)"
-msgstr ""
+msgstr "Zu Ihrer Playlist hinzugefügt (/my)"
 
 #: handlers/favorites.py:47
 msgid "Removed from your playlist"
-msgstr ""
+msgstr "Von Ihrer Playlist entfernt"
 
 #: handlers/help.py:16
 msgid "🔥 Commands"
-msgstr ""
+msgstr "🔥 Befehle"
 
 #: handlers/help.py:17 handlers/start.py:37
 msgid ""
 "Just send me an artist and/or a song name and I will find music for you!"
 msgstr ""
+"Senden sie mir einen Künstler und/oder Songname und ich finde die Musik!"
 
 #: handlers/help.py:18 handlers/start.py:38
 msgid "/song — search by song title"
-msgstr ""
+msgstr "/song - Suche nach Songname"
 
 #: handlers/help.py:19 handlers/start.py:39
 msgid "/artist — search for artist name"
-msgstr ""
+msgstr "/Artist - Suche nach Künstler"
 
 #: handlers/help.py:20
 msgid "/my — list your playlist"
-msgstr ""
+msgstr "/my - Ihre Playlist"
 
 #: handlers/help.py:21
 msgid "/top — popular songs"
-msgstr ""
+msgstr "/top - aktuelle Hits"
 
 #: handlers/help.py:22 handlers/start.py:41
 msgid "/settings — change settings"
-msgstr ""
+msgstr "/settings - Einstellungen ändern"
 
 #: handlers/help.py:23
 msgid "/donate — support authors"
-msgstr ""
+msgstr "/donate - Unterstützen sie uns"
 
 #: handlers/help.py:24
 msgid "/premium — premium info"
-msgstr ""
+msgstr "/premium - Informationen zum Premium-Account"
 
 #: handlers/help.py:26
 #, python-format
 msgid "Official news channel: %(channel)s"
-msgstr ""
+msgstr "Offizieller News-Kanal %(channel)s"
 
 #: handlers/help.py:27
 #, python-format
 msgid "Contact information: %(contact)s"
-msgstr ""
+msgstr "Kontakt-Informationen: %(contact)s"
 
 #: handlers/search.py:117 handlers/search.py:172
 msgid "I found nothing"
@@ -157,15 +171,15 @@ msgstr "Ich habe nichts gefunden 😔"
 #: handlers/search.py:135
 #, python-format
 msgid "Results %(first)d-%(last)d of %(total)d\n"
-msgstr ""
+msgstr "Ergebnisse %(first)d-%(last)d von %(total)d\n"
 
 #: handlers/search.py:213
 msgid "What song are you looking for?"
-msgstr ""
+msgstr "Nach welchem Song suchen Sie ?"
 
 #: handlers/search.py:224
 msgid "What artist are you looking for?"
-msgstr ""
+msgstr "Nach welchem Künstler suchen Sie ?"
 
 #: handlers/search.py:280 handlers/search.py:303
 msgid "You need to search for something before"
@@ -173,48 +187,48 @@ msgstr "Du musst erst nach etwas suchen 🐸"
 
 #: handlers/search.py:308
 msgid "You're at the first page already"
-msgstr ""
+msgstr "Sie sind schon auf der ersten Seite"
 
 #: handlers/settings.py:31
 msgid "Enabled"
-msgstr ""
+msgstr "Aktiviert"
 
 #: handlers/settings.py:32
 msgid "Disabled"
-msgstr ""
+msgstr "Deaktiviert"
 
 #: handlers/settings.py:35
 msgid "Language"
-msgstr ""
+msgstr "Sprache"
 
 #: handlers/settings.py:37
 #, python-format
 msgid "Bitrate preview: %s"
-msgstr ""
+msgstr "Bitraten Vorschau: %s"
 
 #: handlers/settings.py:40
 #, python-format
 msgid "Like (heart) buttons: %s"
-msgstr ""
+msgstr "Gefällt (Herz) Knöpfe: %s"
 
 #: handlers/settings.py:43
-#, python-format
+#, fuzzy, python-format
 msgid "Inline mode captions: %s"
-msgstr ""
+msgstr "Inline mode captions: %s"
 
 #: handlers/settings.py:46
 #, python-format
 msgid "Show audio format: %s"
-msgstr ""
+msgstr "Zeige Audio-Format: %s"
 
 #: handlers/settings.py:49
 #, python-format
 msgid "Search results: %d"
-msgstr ""
+msgstr "Suchergebnisse: %d"
 
 #: handlers/settings.py:54
 msgid "What would you like to change?"
-msgstr ""
+msgstr "Was würden Sie gerne ändern ?"
 
 #: handlers/settings.py:74
 msgid "Please, select new language"
@@ -223,6 +237,7 @@ msgstr "Bitte Sprache wählen"
 #: handlers/settings.py:83
 msgid "Please help us with a donation (/donate) to access this feature"
 msgstr ""
+"Bitte helfen sie uns mit einer Spende (/donate) um dieses Feature zu nutzen"
 
 #: handlers/settings.py:141
 msgid "Language settings updated"
@@ -230,13 +245,15 @@ msgstr "👌🇩🇪 Spracheinstellungen aktualisiert"
 
 #: handlers/start.py:40
 msgid "/setlang — change language"
-msgstr ""
+msgstr "/setlang — Sprache ändern"
 
 #: handlers/unknowncommand.py:27
 #, python-format
 msgid ""
 "Unknown command: %(command)s. Call /help for a list of available commands."
 msgstr ""
+"Unbekannter Befehl: %(command)s. Nutze /help für eine Liste verfügbarer "
+"Befehle."
 
 #~ msgid ""
 #~ "What artist are you looking for? For example «Lera Lynn» or «Wiz Khalifa»"
