--- a/pt/LC_MESSAGES/vk-music-bot.po
+++ b/pt/LC_MESSAGES/vk-music-bot.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-06-01 16:38+0300\n"
-"PO-Revision-Date: 2019-06-01 16:52+0300\n"
+"PO-Revision-Date: 2019-06-01 13:50-0300\n"
 "Last-Translator: Lucas Vasconcelos <lucaslg26@yahoo.com.br>\n"
 "Language-Team: Portuguese\n"
 "Language: pt_BR\n"
@@ -11,142 +11,154 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.2.3\n"
 
 #: handlers/audio.py:118
 msgid "Please wait, your audio is coming..."
-msgstr ""
+msgstr "Por favor espere, seu áudio está chegando.."
 
 #: handlers/audio.py:134
 msgid "Song is removed by copyright owners"
-msgstr "⛔️ Essa música foi removida devido aos direitos autorais"
+msgstr "Essa música foi removida devido aos direitos autorais"
 
 #: handlers/docdb.py:64
 msgid "Got it! Note: it may take time for the song to appear in the search"
-msgstr ""
+msgstr "Entendi! Nota: pode demorar algum tempo para a música apareça na busca"
 
 #: handlers/donation.py:43 handlers/donation.py:113 handlers/settings.py:52
 #: handlers/settings.py:72
 msgid "Close"
-msgstr ""
+msgstr "Fechar"
 
 #: handlers/donation.py:46
 msgid "Support us"
-msgstr ""
+msgstr "Nos apoie"
 
 #: handlers/donation.py:48
 msgid ""
 "Your donations help us to develop new features, increase stability and pay "
 "for our servers."
 msgstr ""
+"Suas doações nos ajudam a desenvolver novos recursos, aumentar a estabilidade "
+"e pagar por nossos servidores."
 
 #: handlers/donation.py:51 handlers/donation.py:131
 msgid ""
 "For just one donation we will gift your account with a *lifetime* premium "
 "status. There is a short list of premium features you will receive:"
 msgstr ""
+"Por apenas uma doação, oferecemos à sua conta um status premium *vitalício*. "
+"Há uma pequena lista de recursos premium que você receberá:"
 
 #: handlers/donation.py:54 handlers/donation.py:134
 msgid "No more ads and spam to you, *forever*"
-msgstr ""
+msgstr "Não há mais anúncios e spam para você, *para sempre*"
 
 #: handlers/donation.py:55 handlers/donation.py:135
 msgid "An option to disable advertising inline captions"
-msgstr ""
+msgstr "Uma opção para desabilitar legendas em linha"
 
 #: handlers/donation.py:56 handlers/donation.py:136
 msgid "An option to display audio format info"
-msgstr ""
+msgstr "Uma opção para exibir informações de formato de áudio"
 
 #: handlers/donation.py:57 handlers/donation.py:137
 msgid "An option to change search results size"
-msgstr ""
+msgstr "Uma opção para alterar o tamanho dos resultados de pesquisa"
 
 #: handlers/donation.py:58 handlers/donation.py:138
 msgid "More options under /settings command"
-msgstr ""
+msgstr "Mais opções sob o comando /settings"
 
 #: handlers/donation.py:60
 #, python-format
 msgid ""
 "Subscribe to our news channel to be notified of new features: %(channel)s"
 msgstr ""
+"Assine nosso canal de notícias para ser notificado sobre novos recursos: "
+"%(channel)s"
 
 #: handlers/donation.py:118
 msgid "You are a premium user!"
-msgstr ""
+msgstr "Você é um usuário premium!"
 
 #: handlers/donation.py:120
 msgid ""
 "You're a good person who kindly supports us, so we granted you a *lifetime* "
 "premium status, enjoy it"
 msgstr ""
+"Você é uma boa pessoa que gentilmente nos apóia. então lhe concedemos um "
+"status premium *vitalício*, aproveite"
 
 #: handlers/donation.py:124
 msgid "There is a short list of premium features you have:"
-msgstr ""
+msgstr "Há uma pequena lista de características premium que você tem:"
 
 #: handlers/donation.py:126
 msgid "You are not premium, yet"
-msgstr ""
+msgstr "Você não é premium, ainda"
 
 #: handlers/donation.py:128
 msgid "Use /donate command to support us and get your *lifetime* premium status"
 msgstr ""
+"Use o comando /donate para nos ajudar e obter seu status *vitalício* de "
+"premium"
 
 #: handlers/favorites.py:34
 msgid "Added to your playlist (/my)"
-msgstr ""
+msgstr "Adicionado para a sua playlist /my"
 
 #: handlers/favorites.py:47
 msgid "Removed from your playlist"
-msgstr ""
+msgstr "Removido de sua playlist"
 
 #: handlers/help.py:16
 msgid "🔥 Commands"
-msgstr ""
+msgstr "🔥 Comandos"
 
 #: handlers/help.py:17 handlers/start.py:37
 msgid "Just send me an artist and/or a song name and I will find music for you!"
 msgstr ""
+"Apenas me envie um nome de artista e/ou uma música e eu encontrarei a música "
+"para você!"
 
 #: handlers/help.py:18 handlers/start.py:38
 msgid "/song — search by song title"
-msgstr ""
+msgstr "/song — procure pelo título da canção"
 
 #: handlers/help.py:19 handlers/start.py:39
 msgid "/artist — search for artist name"
-msgstr ""
+msgstr "/artist — procure pelo nome do artista"
 
 #: handlers/help.py:20
 msgid "/my — list your playlist"
-msgstr ""
+msgstr "/my — listar sua playlist"
 
 #: handlers/help.py:21
 msgid "/top — popular songs"
-msgstr ""
+msgstr "/top — canções populares"
 
 #: handlers/help.py:22 handlers/start.py:41
 msgid "/settings — change settings"
-msgstr ""
+msgstr "/settings — mudar as configurações"
 
 #: handlers/help.py:23
 msgid "/donate — support authors"
-msgstr ""
+msgstr "/donate — ajude os autores"
 
 #: handlers/help.py:24
 msgid "/premium — premium info"
-msgstr ""
+msgstr "/premium — informações do premium"
 
 #: handlers/help.py:26
 #, python-format
 msgid "Official news channel: %(channel)s"
-msgstr ""
+msgstr "Canal de notícias Oficial: %(channel)s"
 
 #: handlers/help.py:27
 #, python-format
 msgid "Contact information: %(contact)s"
-msgstr ""
+msgstr "Informações de contato: %(contact)s"
 
 #: handlers/search.py:117 handlers/search.py:172
 msgid "I found nothing"
@@ -155,169 +167,85 @@ msgstr "Não encontrei nada 😔"
 #: handlers/search.py:135
 #, python-format
 msgid "Results %(first)d-%(last)d of %(total)d\n"
-msgstr ""
+msgstr "Resultados %(first)d-%(last)d de %(total)d\n"
 
 #: handlers/search.py:213
 msgid "What song are you looking for?"
-msgstr ""
+msgstr "Qual música você está procurando?"
 
 #: handlers/search.py:224
 msgid "What artist are you looking for?"
-msgstr ""
+msgstr "Qual artista você está procurando?"
 
 #: handlers/search.py:280 handlers/search.py:303
 msgid "You need to search for something before"
-msgstr "Você precisa procurar por algo antes 🐸"
+msgstr "Você precisa procurar por algo antes"
 
 #: handlers/search.py:308
 msgid "You're at the first page already"
-msgstr ""
+msgstr "Você já está na primeira página"
 
 #: handlers/settings.py:31
 msgid "Enabled"
-msgstr ""
+msgstr "Habilitado"
 
 #: handlers/settings.py:32
 msgid "Disabled"
-msgstr ""
+msgstr "Desabilitado"
 
 #: handlers/settings.py:35
 msgid "Language"
-msgstr ""
+msgstr "Idioma"
 
 #: handlers/settings.py:37
 #, python-format
 msgid "Bitrate preview: %s"
-msgstr ""
+msgstr "Prévia da taxa de bits: %s"
 
 #: handlers/settings.py:40
 #, python-format
 msgid "Like (heart) buttons: %s"
-msgstr ""
+msgstr "Botões de curtir (heart): %s"
 
 #: handlers/settings.py:43
 #, python-format
 msgid "Inline mode captions: %s"
-msgstr ""
+msgstr "Legendas em modo in-line: %s"
 
 #: handlers/settings.py:46
 #, python-format
 msgid "Show audio format: %s"
-msgstr ""
+msgstr "Mostrar formato de áudio: %s"
 
 #: handlers/settings.py:49
 #, python-format
 msgid "Search results: %d"
-msgstr ""
+msgstr "Resultados da busca: %d"
 
 #: handlers/settings.py:54
 msgid "What would you like to change?"
-msgstr ""
+msgstr "O que você gostaria de mudar?"
 
 #: handlers/settings.py:74
 msgid "Please, select new language"
-msgstr ""
+msgstr "Por favor, selecione novo idioma"
 
 #: handlers/settings.py:83
 msgid "Please help us with a donation (/donate) to access this feature"
-msgstr ""
+msgstr "Por favor nos ajude com uma doação (/donate) para acessar este recurso"
 
 #: handlers/settings.py:141
 msgid "Language settings updated"
-msgstr "👌Configurações de idiomas foram atualizadas"
+msgstr "Configurações de idiomas foram atualizadas"
 
 #: handlers/start.py:40
 msgid "/setlang — change language"
-msgstr ""
+msgstr "/setlang — mudar o idioma"
 
 #: handlers/unknowncommand.py:27
 #, python-format
 msgid ""
 "Unknown command: %(command)s. Call /help for a list of available commands."
 msgstr ""
-
-#~ msgid ""
-#~ "What artist are you looking for? For example «Lera Lynn» or «Wiz Khalifa»"
-#~ msgstr ""
-#~ "Qual artista você está procurando? Por exemplo «Dream Theater» ou «Dj "
-#~ "Cleiton Rasta»"
-
-#~ msgid ""
-#~ "What song are you looking for? For example «Get Lucky» or «Take Me To "
-#~ "Church»"
-#~ msgstr ""
-#~ "Qual música você está procurando? Por exemplo «The Spirit Carries On» ou "
-#~ "«Cabeça de Gelo»"
-
-#~ msgid "intro_msg"
-#~ msgstr ""
-#~ "Envie-me o nome da música e/ou o nome do artista, que irei encontrar para "
-#~ "você!\n"
-#~ "/song — procurar pelo nome da música\n"
-#~ "/artist — procurar pelo nome do artista"
-
-#~ msgid "help_cmd_reply"
-#~ msgstr ""
-#~ "🔥 Commands\n"
-#~ "Envie-me o nome da música e/ou o nome do artista, que irei encontrar para "
-#~ "você!\n"
-#~ "/song — procurar pelo nome da música (útil em grupos)\n"
-#~ "/artist — procurar pelo nome do artista\n"
-#~ "/my — ver suas músicas do vk\n"
-#~ "/friends — ver seus amigos do vk\n"
-#~ "/groups — ver seus grupos do vk\n"
-#~ "/add — adicionar a última música baixada na sua lista de músicas do vk\n"
-#~ "\n"
-#~ "☝️Para ter recursos personalizados, você precisa autorizar sua conta do VK "
-#~ "usando o comando /start \n"
-#~ "\n"
-#~ "📖 Letras\n"
-#~ "/lyrics /text /l — envia a letra da última música baixada\n"
-#~ "/lyrics /text /l [1-%(max_songs)d] — envia a letra de uma música da lista "
-#~ "de busca (músicas que contenham letras estão marcadas com um 📖)\n"
-#~ "\n"
-#~ "🌎 Idiomas\n"
-#~ "/setlang — mudar idioma\n"
-#~ "\n"
-#~ "Canal oficial de notícias: @vkmusic_bot_news\n"
-#~ "Contato: @vkmowner\n"
-
-#~ msgid "Oops, something went wrong. Please try again later."
-#~ msgstr "Oops, alguma coisa errada aconteceu. Tente novamente mais tarde."
-
-#~ msgid "unknown_user_in_chat_msg"
-#~ msgstr ""
-#~ "Olá! Parece que ainda não conheço você! 😳\n"
-#~ "Envie-me uma mensagem no chat com o comando /start, que serei seu guia!"
-
-#~ msgid ""
-#~ "To access all features you need to authorize me in your VK, follow [the "
-#~ "link](%s) to do it"
-#~ msgstr ""
-#~ "Para acessar todos os recursos você precisa me autorizar no VK, use o "
-#~ "[link](%s) a seguir para completar o processo"
-
-#~ msgid "Albums"
-#~ msgstr "Álbuns"
-
-#~ msgid "To access this feature you need to authorize me in VK"
-#~ msgstr "Para usar esse recurso você precisa autorizar sua conta do VK"
-
-#~ msgid ""
-#~ "Oops! You need to give me access to your friends. Please, authorize me "
-#~ "again via [this link](%s)"
-#~ msgstr ""
-#~ "Oops! Você precisa me dar acesso aos seus amigos. Por favor, me autorize "
-#~ "novamente pelo [link](%s)"
-
-#~ msgid "Song is too big"
-#~ msgstr "A música é muito grande 😔"
-
-#~ msgid "Choose a song number from 1 to %d"
-#~ msgstr "Escolha uma música de 1 a %d"
-
-#~ msgid "Download something before!"
-#~ msgstr "Baixe alguma coisa antes de executar este comando!"
-
-#~ msgid "No lyrics found"
-#~ msgstr "Não foram encontradas letras para essa música 😔"
+"Comando desconhecido: %(command)s. Digite /help para uma lista de comandos "
+"disponíveis."
