--- a/fa/LC_MESSAGES/vk-music-bot.po
+++ b/fa/LC_MESSAGES/vk-music-bot.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-06-01 16:38+0300\n"
-"PO-Revision-Date: 2019-06-01 20:17+0430\n"
+"PO-Revision-Date: 2019-06-01 21:31+0430\n"
 "Last-Translator: Amirhosseinhpv <support@intel-software.ir>\n"
 "Language-Team: \n"
 "Language: fa\n"
@@ -57,19 +57,19 @@ msgstr ""
 
 #: handlers/donation.py:54 handlers/donation.py:134
 msgid "No more ads and spam to you, *forever*"
-msgstr "برای *همیشه* از تبلیغات خلاص شدید"
+msgstr "از تبلیغات خلاص شدید. برای *همیشه*"
 
 #: handlers/donation.py:55 handlers/donation.py:135
 msgid "An option to disable advertising inline captions"
-msgstr ""
+msgstr "حذف نمایش تبلیغ بات در آهنگ‌هایی که در آهنگ‌های درون-پیغامی"
 
 #: handlers/donation.py:56 handlers/donation.py:136
 msgid "An option to display audio format info"
-msgstr ""
+msgstr "تنظیمات نمایش یا عدم نمایش فرمت فایل آهنگ"
 
 #: handlers/donation.py:57 handlers/donation.py:137
 msgid "An option to change search results size"
-msgstr ""
+msgstr "قابلیت تغییر تعداد آهنگ جستجو شده"
 
 #: handlers/donation.py:58 handlers/donation.py:138
 msgid "More options under /settings command"
@@ -84,7 +84,7 @@ msgstr ""
 
 #: handlers/donation.py:118
 msgid "You are a premium user!"
-msgstr "شما اکنون کاربر ویژه هستید! "
+msgstr "شما اکنون کاربر ویژه هستید!"
 
 #: handlers/donation.py:120
 msgid ""
@@ -92,7 +92,7 @@ msgid ""
 "premium status, enjoy it"
 msgstr ""
 "از کمک مالی شما متشکریم. این لطف شما را با یک حساب کاربری ویژه *مادام‌العمر* "
-"جبران می کنیم. از VKM لذت ببرید!"
+"جبران می کنیم. از VKM لذت ببرید"
 
 #: handlers/donation.py:124
 msgid "There is a short list of premium features you have:"
@@ -106,61 +106,63 @@ msgstr "حساب شما هنوز ویژه نیست"
 msgid ""
 "Use /donate command to support us and get your *lifetime* premium status"
 msgstr ""
+"برای کمک مالی به ما از دستور /donate استفاده کنید و حساب ویژه مادام‌العمر از "
+"ما جایزه بگیرید"
 
 #: handlers/favorites.py:34
 msgid "Added to your playlist (/my)"
-msgstr ""
+msgstr "به لیست آهنگ‌های شما اضافه شد (برای مشاهده دستور /my را بنویسید)"
 
 #: handlers/favorites.py:47
 msgid "Removed from your playlist"
-msgstr ""
+msgstr "از لیست آهنگ‌های شما حذف شد"
 
 #: handlers/help.py:16
 msgid "🔥 Commands"
-msgstr ""
+msgstr "🔥 دستورات"
 
 #: handlers/help.py:17 handlers/start.py:37
 msgid ""
 "Just send me an artist and/or a song name and I will find music for you!"
-msgstr ""
+msgstr "کافیه اسم خواننده یا آهنگ رو برام بفرستی تا آهنگ رو پیدا کنم!"
 
 #: handlers/help.py:18 handlers/start.py:38
 msgid "/song — search by song title"
-msgstr ""
+msgstr "/song - جستجوی با نام آهنگ"
 
 #: handlers/help.py:19 handlers/start.py:39
 msgid "/artist — search for artist name"
-msgstr ""
+msgstr "/artist - جستجو با نام خواننده"
 
 #: handlers/help.py:20
 msgid "/my — list your playlist"
-msgstr ""
+msgstr "/my - مشاهده لیست آهنگ‌های من"
 
 #: handlers/help.py:21
 msgid "/top — popular songs"
-msgstr ""
+msgstr "/top - آهنگ‌های برتر"
 
 #: handlers/help.py:22 handlers/start.py:41
 msgid "/settings — change settings"
-msgstr ""
+msgstr "/settings - تنظیمات"
 
 #: handlers/help.py:23
 msgid "/donate — support authors"
-msgstr ""
+msgstr "/donate - کمک مالی"
 
 #: handlers/help.py:24
 msgid "/premium — premium info"
-msgstr ""
+msgstr "/premium - حساب کاربری ویژه"
 
 #: handlers/help.py:26
 #, python-format
 msgid "Official news channel: %(channel)s"
-msgstr ""
+msgstr "کانال رسمی اخبار: %(channel)s"
 
 #: handlers/help.py:27
 #, python-format
 msgid "Contact information: %(contact)s"
-msgstr ""
+msgstr "اطلاعات تماس: %(contact)s"
 
 #: handlers/search.py:117 handlers/search.py:172
 msgid "I found nothing"
@@ -169,7 +171,7 @@ msgstr "چیزی پیدا نشد 😔"
 #: handlers/search.py:135
 #, python-format
 msgid "Results %(first)d-%(last)d of %(total)d\n"
-msgstr ""
+msgstr "نمایش %(first)d-%(last)d از %(total)d\n"
 
 #: handlers/search.py:213
 msgid "What song are you looking for?"
@@ -207,22 +209,22 @@ msgstr "نمایش بیت ریت : %s"
 #: handlers/settings.py:40
 #, python-format
 msgid "Like (heart) buttons: %s"
-msgstr ""
+msgstr "دکمه‌های قلب: %s"
 
 #: handlers/settings.py:43
 #, python-format
 msgid "Inline mode captions: %s"
-msgstr ""
+msgstr "عنوان آهنگ ارسالی با بات درون-پیامی: %s"
 
 #: handlers/settings.py:46
 #, python-format
 msgid "Show audio format: %s"
-msgstr ""
+msgstr "نمایش فرمت فایل آهنگ: %s"
 
 #: handlers/settings.py:49
 #, python-format
 msgid "Search results: %d"
-msgstr ""
+msgstr "نتایج جستجو:‌ %d"
 
 #: handlers/settings.py:54
 msgid "What would you like to change?"
@@ -234,7 +236,7 @@ msgstr "لطفا زبان جدید را انتخاب نمایید"
 
 #: handlers/settings.py:83
 msgid "Please help us with a donation (/donate) to access this feature"
-msgstr ""
+msgstr "لطفا برای دسترسی به این قابلیت، به این بات کمک مالی کنید"
 
 #: handlers/settings.py:141
 msgid "Language settings updated"
